Fix excessively green dark mode syntax highlighting

--- a/srht/scss/highlight-dark.scss
+++ b/srht/scss/highlight-dark.scss
@@ -32,7 +32,7 @@
 .highlight .nf { color: #a6e22e !important } /* Name.Function */
 .highlight .nl { color: #f8f8f2 !important } /* Name.Label */
 .highlight .nn { color: #f8f8f2 !important } /* Name.Namespace */
-.highlight .nx { color: #a6e22e !important } /* Name.Other */
+.highlight .nx { color: #fefefe !important } /* Name.Other */
 .highlight .py { color: #f8f8f2 !important } /* Name.Property */
 .highlight .nt { color: #f92672 !important } /* Name.Tag */
 .highlight .nv { color: #f8f8f2 !important } /* Name.Variable */
